--- a/views/users.pug
+++ b/views/users.pug
@@ -2,3 +2,7 @@ form(action='/users', method='POST')
   label Name:
   input(name="username", type="text")
   button Say Hi To Me!!
+
+ul
+  each name in names
+    li #{name}
