users list stored in session

--- a/server/views/users.pug
+++ b/server/views/users.pug
@@ -12,7 +12,7 @@ block content
                 button#checkAll.btn.btn-primary Add User
           hr
           ul#sortable.list-unstyled.list-group.list-users
-            each name,index in names
+            each name,index in users
               li.list-group-item
                 .content
                   p #{name}&nbsp;
