--- a/server/views/users.pug
+++ b/server/views/users.pug
@@ -7,7 +7,7 @@ block content
           h1 List Users
           form(action='/users', method='POST')
             .input-group
-              input.form-control.add-todo(name="username", type='text', placeholder='Add user')
+              input.form-control.add-todo(name="username", type='text', placeholder='Add user', autofocus)
               span.input-group-btn
                 button#checkAll.btn.btn-primary Add User
           hr
@@ -19,7 +19,7 @@ block content
                   form.edit-form(action=`/users/${index}`)
                     input.input-lg.hidden(name='edited-name', value=name)
                 .edition
-                  button.btn.btn-primary.edit(href=`/users/${index}`)
+                  a.btn.btn-primary.edit(href=`/users/${index}`)
                     i.glyphicon.glyphicon-edit
-                  button.btn.btn-danger.remove(href=`/users/${index}`)
+                  a.btn.btn-danger.remove(href=`/users/${index}`)
                     i.glyphicon.glyphicon-remove
