--- a/server/views/users.pug
+++ b/server/views/users.pug
@@ -12,14 +12,14 @@ block content
                 button#checkAll.btn.btn-primary Add User
           hr
           ul#sortable.list-unstyled.list-group.list-users
-            each name,index in users
+            each user in users
               li.list-group-item
                 .content
-                  p #{name}&nbsp;
-                  form.edit-form(action=`/users/${index}`)
-                    input.input-lg.hidden(name='edited-name', value=name)
+                  p #{user.username}&nbsp;
+                  form.edit-form(action=`/user/${user.id}`)
+                    input.input-lg.hidden(name='edited-name', value=user.username)
                 .edition
-                  a.btn.btn-primary.edit(href=`/users/${index}`)
+                  a.btn.btn-primary.edit
                     i.glyphicon.glyphicon-edit
-                  a.btn.btn-danger.remove(href=`/users/${index}`)
+                  a.btn.btn-danger.remove(href=`/user/${user.id}`)
                     i.glyphicon.glyphicon-remove
